@@ -1,3 +1,8 @@
+ENet 1.3.4 (May 29, 2012):
+* added enet_peer_ping_interval() for configuring per-peer ping intervals
+* added enet_peer_timeout() for configuring per-peer timeouts
+* added protocol packet size limits
+
 ENet 1.3.3 (June 28, 2011):
 
 * fixed bug with simultaneous disconnects not dispatching events
